<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
            android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="co.prestoapp.www.Views.CreateAccountActivity">

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/activity_create_text_Account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="109dp"
        android:fontFamily="@font/seguisb"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_create_text_Data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:fontFamily="@font/seguisb"
        android:text="@string/main_info"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintRight_toRightOf="@+id/activity_create_text_Account"
        app:layout_constraintLeft_toLeftOf="@+id/activity_create_text_Account"
        app:layout_constraintTop_toBottomOf="@+id/activity_create_text_Account" />

    <EditText
        android:id="@+id/activity_create_edit_Name"
        android:layout_width="277dp"
        android:layout_height="42dp"
        android:layout_marginTop="158dp"
        android:background="@drawable/curved_corners_white"
        android:ems="10"
        android:fontFamily="@font/seguisb"
        android:hint="@string/full_name"
        android:inputType="text"
        android:textColorHint="@color/login_text"
        android:textColor="@color/login_text"
        android:textSize="13sp"
        android:gravity="right|center_vertical"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_create_text_Data" />


    <EditText
        android:id="@+id/activity_create_edit_Mail"
        android:layout_width="277dp"
        android:layout_height="46dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/curved_corners_white"
        android:ems="10"
        android:fontFamily="@font/seguisb"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/login_text"
        android:textColor="@color/login_text"
        android:textSize="13sp"
        android:gravity="right|center_vertical"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        app:layout_constraintRight_toRightOf="@+id/activity_create_edit_Name"
        app:layout_constraintLeft_toLeftOf="@+id/activity_create_edit_Name"
        app:layout_constraintTop_toBottomOf="@+id/activity_create_edit_Name" />


    <Button
        android:id="@+id/activity_create_button_Continuation"
        android:layout_width="277dp"
        android:layout_height="46dp"
        android:layout_marginTop="503dp"
        android:layout_marginBottom="23dp"
        android:background="@drawable/curved_corners_white"
        android:fontFamily="@font/seguisb"
        android:text="@string/continuation"
        android:textColor="@color/colorPrimary"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/activity_create_edit_Name"
        app:layout_constraintLeft_toLeftOf="@+id/activity_create_edit_Name"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
</ScrollView>