<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="co.prestoapp.www.Views.PhoneActivity">

<android.support.constraint.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/activity_phone_text_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="157dp"
        android:fontFamily="@font/seguisb"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_phone_text_Enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:fontFamily="@font/seguisb"
        android:text="@string/enter_phone"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintRight_toRightOf="@+id/activity_phone_text_Login"
        app:layout_constraintLeft_toLeftOf="@+id/activity_phone_text_Login"
        app:layout_constraintTop_toBottomOf="@+id/activity_phone_text_Login" />

    <EditText
        android:id="@+id/activity_phone_edit_PhoneNumber"
        android:layout_width="277dp"
        android:layout_height="46dp"
        android:layout_marginTop="337dp"
        android:background="@drawable/curved_corners_white"
        android:ems="10"
        android:fontFamily="@font/seguisb"
        android:gravity="right|center_vertical"
        android:hint="@string/phone"
        android:inputType="phone"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@color/login_text"
        android:textColorHint="@color/login_text"
        android:textSize="13sp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/activity_phone_button_Continuation"
        android:layout_width="277dp"
        android:layout_height="46dp"
        android:layout_marginTop="28dp"
        android:text="@string/continuation"
        android:textSize="13sp"
        android:fontFamily="@font/seguisb"
        android:background="@drawable/curved_corners_white"
        android:textColor="@color/colorPrimary"
        app:layout_constraintRight_toRightOf="@+id/activity_phone_edit_PhoneNumber"
        app:layout_constraintLeft_toLeftOf="@+id/activity_phone_edit_PhoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/activity_phone_edit_PhoneNumber" />
</android.support.constraint.ConstraintLayout>

</ScrollView>