<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="co.prestoapp.www.Views.ValidationCodeActivity">

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/activity_validation_text_Enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="157dp"
        android:fontFamily="@font/seguisb"
        android:text="@string/enter_validation_code"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_validation_text_Message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:fontFamily="@font/seguisb"
        android:text="@string/receive_message"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintRight_toRightOf="@+id/activity_validation_text_Enter"
        app:layout_constraintLeft_toLeftOf="@+id/activity_validation_text_Enter"
        app:layout_constraintTop_toBottomOf="@+id/activity_validation_text_Enter" />

    <EditText
        android:id="@+id/activity_validation_edit_Code"
        android:layout_width="277dp"
        android:layout_height="46dp"
        android:layout_marginTop="337dp"
        android:ems="10"
        android:inputType="number"
        android:fontFamily="@font/seguisb"
        android:hint="@string/code"
        android:textColorHint="@color/login_text"
        android:textSize="13sp"
        android:gravity="right|center_vertical"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:textColor="@color/login_text"
        android:background="@drawable/curved_corners_white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/activity_validation_button_Login"
        android:layout_width="277dp"
        android:layout_height="46dp"
        android:layout_marginTop="28dp"
        android:text="@string/login"
        android:textSize="13sp"
        android:fontFamily="@font/seguisb"
        android:background="@drawable/curved_corners_white"
        android:textColor="@color/colorPrimary"
        app:layout_constraintRight_toRightOf="@+id/activity_validation_edit_Code"
        app:layout_constraintLeft_toLeftOf="@+id/activity_validation_edit_Code"
        app:layout_constraintTop_toBottomOf="@+id/activity_validation_edit_Code" />
</android.support.constraint.ConstraintLayout>

</ScrollView>