<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="co.prestoapp.www.Views.CreateAccount2Activity">

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">
    <TextView
        android:id="@+id/activity_create2_text_Account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/seguisb"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_create2_text_Zones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:fontFamily="@font/seguisb"
        android:text="@string/zone"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintRight_toRightOf="@+id/activity_create2_text_Account"
        app:layout_constraintLeft_toLeftOf="@+id/activity_create2_text_Account"
        app:layout_constraintTop_toBottomOf="@+id/activity_create2_text_Account" />



    <!--android:backgroundTint change the color of arrow -->
    <Spinner
        android:id="@+id/activity_create2_spinner_Zones"
        android:layout_width="277dp"
        android:layout_height="46dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="158dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/custom_spinner"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_create2_text_Zones" />

    <EditText
        android:id="@+id/activity_create2_edit_Address"
        android:layout_width="277dp"
        android:layout_height="46dp"
        android:layout_marginTop="11dp"
        android:background="@drawable/curved_corners_white"
        android:ems="10"
        android:fontFamily="@font/seguisb"
        android:hint="@string/address"
        android:inputType="text"
        android:textColorHint="@color/login_text"
        android:textColor="@color/login_text"
        android:textSize="13sp"
        android:gravity="right|center_vertical"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        app:layout_constraintRight_toRightOf="@+id/activity_create2_spinner_Zones"
        app:layout_constraintLeft_toLeftOf="@+id/activity_create2_spinner_Zones"
        app:layout_constraintTop_toBottomOf="@+id/activity_create2_spinner_Zones" />


    <Button
        android:id="@+id/activity_create2_button_Login"
        android:layout_width="277dp"
        android:layout_height="46dp"
        android:layout_marginTop="503dp"
        android:layout_marginBottom="23dp"
        android:background="@drawable/curved_corners_white"
        android:fontFamily="@font/seguisb"
        android:text="@string/login"
        android:textColor="@color/colorPrimary"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/activity_create2_edit_Address"
        app:layout_constraintLeft_toLeftOf="@+id/activity_create2_edit_Address"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>

</ScrollView>