<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.ReportActivity">
    <!--app:elevation attribute can delete the shadow of AppBar-->

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <!--creating ConstraintLayout for adding toolbar and card icon inside it-->


        <!--making background white-->
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--android:background attribute change the bg color of AppBar-->

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />


            <ImageView
                android:id="@+id/activity_report_image_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@+id/toolbar"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/back_arrow" />

            <TextView
                android:id="@+id/activity_report_text_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:fontFamily="@font/seguisb"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                android:text="@string/report"
                app:layout_constraintBottom_toBottomOf="@+id/toolbar"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@+id/toolbar" />

        </android.support.constraint.ConstraintLayout>


    </android.support.design.widget.AppBarLayout>

    <EditText
        android:id="@+id/activity_report_editText_enterReport"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/curved_corners_gray_light"
        android:ems="10"
        android:fontFamily="@font/seguisb"
        android:gravity="top|right"
        android:inputType="textMultiLine"
        android:padding="15dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/activity_report_button_sendReport"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />


    <Button
        android:id="@+id/activity_report_button_sendReport"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/curved_corners_send_report"
        android:fontFamily="@font/seguisb"
        android:text="@string/send_report"
        android:textColor="@color/white"
        android:textSize="15sp"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/activity_report_editText_enterReport"
        app:layout_constraintStart_toStartOf="@+id/activity_report_editText_enterReport" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/curved_corners_report"
        android:fontFamily="@font/seguisb"
        android:gravity="center_vertical"
        android:paddingRight="10dp"
        android:text="@string/what_is_your_problem"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
</android.support.constraint.ConstraintLayout>